Revert collect(Collectors.toList()) refactoring
Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>