@@ -14,6 +14,7 @@ package org.openhab.binding.hue.internal.dto.clip2;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 
@@ -28,7 +29,7 @@ public class Resources {
     private List<Resource> data = new ArrayList<>();
 
     public List<String> getErrors() {
-        return errors.stream().map(Error::getDescription).toList();
+        return errors.stream().map(Error::getDescription).collect(Collectors.toList());
     }
 
     public boolean hasErrors() {
